# CPP_zia_2019

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  compil.sh  conanfile.py
config/: server.json
config/hosts/: default.json  epitech.json
config/ssl/: dh2048.pem  rootca.srl  user.csr
configLinux/hosts/: default.json  epitech.json
configLinux/ssl/: user.crt
configWindows/: server.json
configWindows/hosts/: default.json  epitech.json
configWindows/ssl/: rootca.crt  rootca.key  user.key
core/: ServerConfig.cpp  ServerConfig.hpp  main.cpp
core/HttpParser/: HttpDeserialyzer.cpp  HttpParser.cpp  HttpParser.hpp  HttpRequest.hpp
core/HttpResponseMaker/: HttpResponseMaker.cpp  HttpResponseMaker.hpp
core/MimeTypes/: MimeTypes.cpp  MimeTypes.hpp
core/ModuleManager/: ModuleManager.cpp  ModuleManager.hpp
core/ServerConfig/: ServerConfig.cpp  ServerConfig.hpp
core/TcpConnection/: TcpConnection.cpp  TcpConnection.hpp
core/TcpHandler/: TcpHandler.cpp  TcpHandler.hpp
core/TcpServer/: TcpServer.cpp  TcpServer.hpp
core/TlsTcpConnection/: TlsTcpConnection.hpp
core/TlsTcpServer/: TlsTcpServer.cpp  TlsTcpServer.hpp
core/VirtualHostManager/: VirtualHostManager.cpp  VirtualHostManager.hpp
core/VirtualHostsConfig/: VirtualHostsConfig.cpp  VirtualHostsConfig.hpp
core/ZiaCore/: ZiaArgs.hpp  ZiaCore.cpp  ZiaCore.hpp  ZiaInstances.hpp
live/pastek.space/: cert.pem  fullchain.pem  privkey.pem
src/core/: main.cpp
src/core/HttpParser/: HttpDeserialyzer.cpp  HttpDeserialyzer.hpp
src/core/HttpResponseMaker/: HttpResponseMaker.cpp  HttpResponseMaker.hpp
src/core/ITcpServer/: ITcpServer.hpp
src/core/ModuleManager/: ModuleManager.cpp  ModuleManager.hpp  ModuleToolbox.hpp
src/core/ServerConfig/: ServerConfig.cpp  ServerConfig.hpp
src/core/TcpConnection/: TcpConnection.cpp  TcpConnection.hpp
src/core/TcpHandler/: TcpHandler.hpp
src/core/TcpServer/: TcpServer.hpp
src/core/TlsTcpConnection/: TlsTcpConnection.cpp  TlsTcpConnection.hpp
src/core/TlsTcpServer/: TlsTcpServer.cpp  TlsTcpServer.hpp
src/core/VirtualHostManager/: VirtualHostManager.cpp  VirtualHostManager.hpp
src/core/ZiaCore/: ZiaCore.cpp  ZiaCore.hpp  ZiaVersion.hpp
src/modules/PhpModule/: PhpModule.cpp  PhpModule.hpp
src/modules/SslModule/: SslModule.cpp  SslModule.hpp
